--- a/BloggerWay.MVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Category/Index.cshtml
@@ -72,6 +72,13 @@
                             </div>
                         </div>
 }
+@if(Model.ResultStatus == ResultStatus.Error)
+{
+    <div class="alert alert-danger mt-3">
+        @Model.Message <br />
+        Dashboard Sayfasına geri fönmek için <a class="alert-link" asp-area="Admin" asp-controller="Home" asp-action="Index">tıklayınız</a>
+    </div>
+}
 @section Scripts{
 <script>  $(document).ready( function () {
     $('#categoriesTable').DataTable({    
