--- a/BloggerWay.MVC/Areas/Admin/Views/Category/Index.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Category/Index.cshtml
@@ -46,7 +46,6 @@
                         <th>Son Düzenlenme Tarihi</th>
                         <th>Son Düzenleyen Kullanıcı Adı</th>
                         <th>İşlemler</th>
-
                     </tr>
                     </tfoot>
                     <tbody>
@@ -63,17 +62,17 @@
                             <td>@category.CreatedByName</td>
                             <td>@category.ModifiedDate.ToShortDateString()</td>
                             <td>@category.ModifiedByName</td>
-                                <td>
-                                    <button class="btn btn-primary btn-sm"><span class="fas fa-edit"></span>Düzenle</button>
-                                    <button class="btn btn-danger btn-delete"data-id="@category.Id"><span class="fas fa-minus-circle"></span>Sil</button>
-                                </td>
+                            <td>
+                                <button class="btn btn-primary btn-sm"><span class="fas fa-edit"></span> Düzenle</button>
+                                <button class="btn btn-danger btn-sm btn-delete" data-id="@category.Id"><span class="fas fa-minus-circle"></span> Sil</button>
+                            </td>
                         </tr>
                     }
                     </tbody>
                 </table>
             </div>
         </div>
-                        </div>
+     </div>
 }
 @if (Model.ResultStatus == ResultStatus.Error)
 {
@@ -108,7 +107,7 @@
                         action: function(e, dt, node, config) {
                             $.ajax({
                                 type: 'GET',
-                                url: '@Url.Action("GetAllCategories","Category")',
+                                url: '@Url.Action("GetAllCategories", "Category")',
                                 contentType: "application/json",
                                 beforeSend: function() {
                                     $('#categoriesTable').hide();
@@ -240,6 +239,52 @@
                         });
                     });
             });
+            @* Ajax POST / Posting the FormData as CategoryAddDto ends here. *@
+            @* Ajax POST / Deleting a Category starts from here *@
+            $(document).on('click',
+                '.btn-delete',
+                function(event) {
+                    event.preventDefault();
+                    const id = $(this).attr('data-id');
+                    Swal.fire({
+                        title: 'Silmek istediğinize emin misiniz?',
+                        text: "Seçili kategori silinicektir!",
+                        icon: 'warning',
+                        showCancelButton: true,
+                        confirmButtonColor: '#3085d6',
+                        cancelButtonColor: '#d33',
+                        confirmButtonText: 'Evet, silmek istiyorum.',
+                        cancelButtonText: 'Hayır, silmek istemiyorum.'
+                    }).then((result) => {
+                        if (result.isConfirmed) {
+                            $.ajax({
+                                type: 'POST',
+                                dataType: 'json',
+                                data: { categoryId: id },
+                                url: '@Url.Action("Delete", "Category")',
+                                success: function(data) {
+                                    const result = jQuery.parseJSON(data);
+                                    if (result.ResultStatus === 0) {
+                                        Swal.fire(
+                                            'Silindi!',
+                                            'Seçili kategori başarıyla silinmiştir.',
+                                            'success'
+                                        );
+                                        const tableRow = $(`[name="${id}"]`);
+                                        tableRow.fadeOut(3500);
+                                    } else {
+                                        Swal.fire({
+                                            icon: 'error',
+                                            title: 'Bir hata oluştu!',
+                                            text: `${result.Message}`,
+                                        });
+                                    }
+                                },
+                                error: function(err) { console.log(err); }
+                            })
+                        }
+                    })
+                });
         });
     </script>
 }
