--- a/BloggerWay.MVC/Areas/Admin/Views/User/Index.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/User/Index.cshtml
@@ -8,7 +8,7 @@
 {
     <div id="modalPlaceHolder" aria-hidden="true"></div>
     <div class="card mb-4 mt-2">
-                            <div class="card-header"> 
+                            <div class="card-header">
                                 <i class="fas fa-table mr-1"></i>
                                 Kullanıcılar
                             </div>
@@ -23,7 +23,7 @@
                         <th>ID</th>
                         <th>Kullanıcı Adı</th>
                         <th>E-Posta Adresi</th>
-                        <th>Telefon</th>
+                        <th>Telefon Numarası</th>
                         <th>Resim</th>
                         <th>İşlemler</th>
                     </tr>
@@ -33,7 +33,7 @@
                         <th>ID</th>
                         <th>Kullanıcı Adı</th>
                         <th>E-Posta Adresi</th>
-                        <th>Telefon</th>
+                        <th>Telefon Numarası</th>
                         <th>Resim</th>
                         <th>İşlemler</th>
                     </tr>
@@ -47,7 +47,6 @@
                             <td>@user.Email</td>
                             <td>@user.PhoneNumber</td>
                             <td>@user.Picture</td>
-                         
                             <td>
                                 <button class="btn btn-primary btn-sm btn-update" data-id="@user.Id"><span class="fas fa-edit"></span></button>
                                 <button class="btn btn-danger btn-sm btn-delete" data-id="@user.Id"><span class="fas fa-minus-circle"></span></button>
