--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/_LayoutSideBarNavPartial.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/_LayoutSideBarNavPartial.cshtml
@@ -4,7 +4,7 @@
                     <div class="sb-sidenav-menu">
                         <div class="nav">
                             <div class="sb-sidenav-menu-heading">MENÜ</div>
-                            <a class="nav-link" asp-area="Admin"  asp-controller="Home" asp-action="Index.html">
+                            <a class="nav-link" asp-area="Admin"  asp-controller="Home" asp-action="Index">
                                 <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                                 Dashboard
                             </a>
@@ -13,20 +13,20 @@
                                 <div class="sb-nav-link-icon"><i class="fas fa-th-list"></i></div>
                                 Kategoriler
                             </a>
-                              <a class="nav-link" asp-area="Admin"  asp-controller="Article" asp-action="Index.html">
+                              <a class="nav-link" asp-area="Admin"  asp-controller="Article" asp-action="Index">
                                 <div class="sb-nav-link-icon"><i class="fas fa-file-alt"></i></div>
                                 Makaleler
                             </a>
-                              <a class="nav-link" asp-area="Admin"  asp-controller="Comment" asp-action="Index.html">
+                              <a class="nav-link" asp-area="Admin"  asp-controller="Comment" asp-action="Index">
                                 <div class="sb-nav-link-icon"><i class="fas fa-comments"></i></div>
                                 Yorumlar
                             </a>
                                     <div class="sb-sidenav-menu-heading">Kullanıcılar</div>
-                              <a class="nav-link" asp-area="Admin"  asp-controller="Role" asp-action="Index.html">
+                              <a class="nav-link" asp-area="Admin"  asp-controller="Role" asp-action="Index">
                                 <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
                                 Roller
                             </a>
-                              <a class="nav-link" asp-area="Admin"  asp-controller="User" asp-action="Index.html">
+                              <a class="nav-link" asp-area="Admin"  asp-controller="User" asp-action="Index">
                                 <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                                 Kullanıcılar 
                             </a>
