ChangeDetails Action'ının HttpPost Bölümü yazıldı.

--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,7 +32,13 @@
             <div id="layoutSidenav_content">
                 <main>
                   <div class="container-fluid">
-                      @RenderBody()
+                    @if (TempData["SuccessMessage"] != null)
+                    {
+                        <div class="alert alert-success mt-2" role="alert">
+                            @TempData["SuccessMessage"]
+                        </div>
+                    }
+                    @RenderBody()
                     </div>
                 </main>
                 <footer class="py-4 bg-light mt-auto">
