--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
         <meta name="author" content="" />
         <title>@ViewBag.Title - Admin Paneli | BloggerWay </title>
         @await Html.PartialAsync("_LayoutCssPartial.cshtml")
+        @await RenderSectionAsync("Styles",false);
+        <link href="~/AdminLTE/css/site.css" rel="stylesheet"/>
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
