--- a/BloggerWay.MVC/Areas/Admin/Views/Home/Index.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Home/Index.cshtml
@@ -85,7 +85,6 @@
                     <th>Yorum Sayısı</th>
                     <th>Aktif Mi?</th>
                     <th>Silinmiş Mi?</th>
-
                 </tr>
                 </thead>
                 <tfoot>
@@ -99,26 +98,23 @@
                     <th>Yorum Sayısı</th>
                     <th>Aktif Mi?</th>
                     <th>Silinmiş Mi?</th>
-
                 </tr>
                 </tfoot>
                 <tbody>
-                    @foreach(var article in Model.Articles.Articles)
-                    {
-                         <tr>
-                    <td>@article.Id</td>
-                    <td>@article.Category.Name</td>
-                    <td>@article.Title</td>
-                    <td><img src="~/img/@article.Thumbnail" class="my-image-table" /></td>
-                    <td>@article.Date.ToShortDateString()</td>
-                    <td>@article.ViewCount</td>
-                    <td>@article.CommentCount</td>
-                    <td>@(article.IsActive ? "Evet": "Hayır")</td>
-                    <td>@(article.IsDeleted ? "Evet": "Hayır")</td>
-
-                </tr>
-                    }
-
+                @foreach (var article in Model.Articles.Articles)
+                {
+                    <tr>
+                        <td>@article.Id</td>
+                        <td>@article.Category.Name</td>
+                        <td>@article.Title</td>
+                        <td><img src="~/img/@article.Thumbnail" class="my-image-table" /></td>
+                        <td>@article.Date.ToShortDateString()</td>
+                        <td>@article.ViewCount</td>
+                        <td>@article.CommentCount</td>
+                        <td>@(article.IsActive ? "Evet" : "Hayır")</td>
+                        <td>@(article.IsDeleted ? "Evet" : "Hayır")</td>
+                    </tr>
+                }
                     
                 </tbody>
             </table>
@@ -127,5 +123,5 @@
 </div>
 @section Scripts
 {
-    <script src="~/js/homeIndex.js" type="application/ecmascript"></script>
+    <script src="~/AdminLTE/js/homeIndex.js" type="application/ecmascript"></script>
 }
