--- a/BloggerWay.MVC/Areas/Admin/Views/Comment/_CommentUpdatePartial.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Comment/_CommentUpdatePartial.cshtml
@@ -1,42 +1,28 @@
-﻿@model BloggerWay.Entities.Dtos.CategoryUpdateDto
+﻿@model BloggerWay.Entities.Dtos.CommentUpdateDto
 <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title"><span class="fas fa-edit"></span> @Model.Name Adlı Kategori Düzenleniyor...</h5>
+                <h5 class="modal-title"><span class="fas fa-edit"></span> @Model.Id Numaralı Yorum Düzenleniyor...</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="İptal">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form asp-action="Update" id="form-category-update">
+                <form asp-action="Update" id="form-comment-update">
                     <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
                     <div asp-validation-summary="All" class="text-danger" id="validation-summary" aria-hidden="true" style="display: none;"></div>
                     <input type="hidden" asp-for="Id" />
+                    <input type="hidden" asp-for="ArticleId" />
                     <div class="form-group">
-                        <label asp-for="Name"></label>
-                        <input class="form-control" asp-for="Name"/>
-                        <span class="text-danger" asp-validation-for="Name"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Description"></label>
-                        <input class="form-control" asp-for="Description"/>
-                        <span class="text-danger" asp-validation-for="Description"></span>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Note"></label>
-                        <input class="form-control" asp-for="Note"/>
-                        <span class="text-danger" asp-validation-for="Note"></span>
+                        <label asp-for="Text"></label>
+                        <textarea class="form-control" asp-for="Text" rows="6"></textarea>
+                        <span class="text-danger" asp-validation-for="Text"></span>
                     </div>
                     <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" asp-for="IsActive"/>
                         <label asp-for="IsActive" class="form-check-label"></label>
                         <span class="text-danger" asp-validation-for="IsActive"></span>
-                    </div>
-                    <div class="form-group form-check">
-                        <input type="checkbox" class="form-check-input" asp-for="IsDeleted"/>
-                        <label asp-for="IsDeleted" class="form-check-label"></label>
-                        <span class="text-danger" asp-validation-for="IsDeleted"></span>
                     </div>
                 </form>
             </div>
