--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <div class="bottom-header">
                     <div class="container">
                         <div class="logo">
-                            <h2><a href="~/Home" title="">BloggerWay</a></h2>
+                            <h2><a style="color:darkslategrey" href="~/Home" title="">BloggerWay</a></h2>
                         </div>
                     </div>
                 </div>
@@ -63,11 +63,11 @@
 
 
 
-        <footer>
+        <footer style="background-color:darkslategrey">
             <div class="container">
-                <div class="footer-content">
+                <div  class="footer-content">
                     <div class="row">
-                        <div class="col-lg-4 col-md-6 col-sm-6">
+                        <div  class="col-lg-4 col-md-6 col-sm-6">
                             <div class="ft-logo">
                                 <h1><a href="#" title="">BloggerWay</a></h1>
                             </div>
@@ -87,7 +87,7 @@
 
         <section class="bottom-strip">
             <div class="container">
-                <p>©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
+                <p style="color:aliceblue">©2022 BloggerWay Tüm Hakları Saklıdır.</p>
             </div>
         </section>
 
