--- a/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
@@ -1,92 +1,11 @@
-﻿@*<!DOCTYPE html>
-<html lang="tr">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="@ViewBag.Description">
-    <meta name="author" content="@ViewBag.Author">
-    <meta name="keywords" content="@ViewBag.Tags"/>
-
-    <title>@ViewBag.Title | BloggerWay</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="~/BlogHome/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="~/BlogHome/css/blog-home.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" asp-controller="Home" asp-action="Index">BloggerWay</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" asp-controller="Home" asp-action="Index">
-                            Anasayfa
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="About">Hakkında</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Home" asp-action="Contact">İletişim</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
-        <div class="row">
-
-            <!-- Blog Entries Column -->
-            @RenderBody()
-
-            <!-- Sidebar Widgets Column -->
-            @await Component.InvokeAsync("RightSideBar")
-
-        </div>
-        <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Tüm Hakları Saklıdır &copy; BloggerWay 2022</p>
-        </div>
-        <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="~/BlogHome/vendor/jquery/jquery.min.js"></script>
-    <script src="~/BlogHome/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
-</html>
-*@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
     <title>@ViewBag.Title | BloggerWay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Programcılar ve Yazılımcılar için Türkçe Kaynak, Rehber ve İçerikler">
-    <meta name="author" content="BloggerWay">
+    <meta   name="author" content="BloggerWay">
 
     <link rel="stylesheet" type="text/css" href="~/blog/css/animate.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/bootstrap.min.css">
@@ -116,7 +35,7 @@
                 <div class="bottom-header">
                     <div class="container">
                         <div class="logo">
-                            <h2><a href="~/Home" title="">BloggerWay</a></h2>
+                            <h2 ><a style="color:darkslategrey" href="~/Home" title="">BloggerWay</a></h2>
                         </div>
                     </div>
                 </div>
@@ -145,7 +64,7 @@
 
 
 
-        <footer>
+        <footer  style="background-color:darkslategrey">
             <div class="container">
                 <div class="footer-content">
                     <div class="row">
@@ -169,7 +88,7 @@
 
         <section class="bottom-strip">
             <div class="container">
-                <p>©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
+                <p style="color:aliceblue">©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
             </div>
         </section>
 
