--- a/BloggerWay.MVC/_ViewImports.cshtml
+++ b/BloggerWay.MVC/_ViewImports.cshtml
@@ -1,2 +1,6 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers;
-@using BloggerWay**
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using BloggerWay*;
+@using BloggerWay.MVC;
+@using BloggerWay.MVC.ViewComponents;
+@using BloggerWay.MVC.Areas.Admin;
+
