--- a/BloggerWay.MVC/Views/Home/Index.cshtml
+++ b/BloggerWay.MVC/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Text.RegularExpressions
 @model BloggerWay.Entities.Dtos.ArticleListDto
-@addTagHelper*,*;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     ViewBag.Title = "Anasayfa";
     Layout = "_Layout";
@@ -12,7 +12,25 @@
     <h1 class="my-4">
         Son Paylaşılan Makaleler
     </h1>
-
+        <form>
+        <div class="form-row">
+            <input type="hidden" id="category-id" value="@(Model.CategoryId!=null?Model.CategoryId.Value:null)" />
+            <input type="hidden" id="current-page" value="@Model.CurrentPage" />
+            <div class="form-group col-md-6">
+                <select class="form-control" id="select-page-size">
+                    <option selected="@(Model.PageSize == 5 ? "selected" : null)" value="5">5</option>
+                    <option selected="@(Model.PageSize == 10 ? "selected" : null)" value="10">10</option>
+                    <option selected="@(Model.PageSize == 20 ? "selected" : null)" value="20">20</option>
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <select class="form-control" id="select-is-ascending">
+                    <option selected="@(Model.IsAscending == false ? "selected" : null)" value="false">En Yeni</option>
+                    <option selected="@(Model.IsAscending ? "selected" : null)" value="true">En Eski</option>
+                </select>
+            </div>
+        </div>
+    </form>
     @foreach (var article in Model.Articles)
    {
        <!-- Blog Post -->
@@ -26,7 +44,7 @@
                    }
                    @(article.Content.Length>250 ? article.Content.Substring(0,250) : article.Content)
                </p>
-               <a style="background-color:#c47941" href="/Article/Detail?articleId=@article.Id"  class="btn btn-primary"><p style="color:white">Daha fazla oku &rarr;</p></a>
+               <a style="background-color:#c47941" asp-controller="Article" asp-action="Detail" asp-route-articleId="@article.Id"  class="btn btn-primary" >Daha fazla oku &rarr;</a>
 
            </div>
            <div style="background-color:#487a7a"class="card-footer text-muted">
@@ -36,48 +54,74 @@
    }
 
     <!-- Pagination -->
-<ul class="pagination justify-content-center mb-4">
-    @{
-                    @if (Model.ShowPrevious)
-                    {
-        @if (Model.CategoryId != null)
-        {
-<li class="page-item">
-    <a class="page-link" href="?~/currentPage=@(Model.CurrentPage-1)" href="?~/categoryId=@Model.CategoryId.Value">&larr; Eski</a>
-</li> }
+    <ul class="pagination justify-content-center mb-4">
+        @{
+            @if (Model.ShowPrevious)
+            {
+                @if (Model.CategoryId != null)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-route-currentPage="@(Model.CurrentPage-1)" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize" asp-route-categoryId="@Model.CategoryId.Value">&larr; Eski</a>
+                    </li> }
                 else
                 {
-<li class="page-item">
-    <a class="page-link" href="?currentPage=@(Model.CurrentPage-1)">&larr; Eski</a>
-</li>}
-
-                    }
-                                @for (var i = 1; i <= Model.TotalPages; i++)
-                                {
-                    <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
-                        @if (Model.CategoryId != null)
-                        {
-        <a class="page-link" href="?currentPage=@i" asp-route-categoryId="@Model.CategoryId.Value">@i</a> }
-                        else
-                        {
-
-        <a class="page-link" href="?currentPage=@i">@i</a>}
+                    <li class="page-item">
+                        <a class="page-link" asp-route-currentPage="@(Model.CurrentPage-1)" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize">&larr; Eski</a>
                     </li>}
-        @if (Model.ShowNext)
-        {
-            @if (Model.CategoryId != null)
-            {
-                <li class="page-item">
-                    <a class="page-link" href="?currentPage=@(Model.CurrentPage+1)" href="?categoryId=@Model.CategoryId.Value">Yeni &rarr;</a>
-                </li> }
-            else
-            {
-                <li class="page-item">
-                    <a class="page-link" href="?currentPage=@(Model.CurrentPage+1)">Yeni &rarr;</a>
-                </li>}
 
+            }
+            @for (var i = 1; i <= Model.TotalPages; i++)
+            {
+                <li class="page-item @(i == Model.CurrentPage ? "active" : "")">
+                    @if (Model.CategoryId != null)
+                    {
+                        <a class="page-link" asp-route-currentPage="@i" asp-route-categoryId="@Model.CategoryId.Value" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize">@i</a> }
+                    else
+                    {
+
+                        <a class="page-link" asp-route-currentPage="@i" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize">@i</a>}
+                </li>}
+            @if (Model.ShowNext)
+            {
+                @if (Model.CategoryId != null)
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-route-currentPage="@(Model.CurrentPage+1)" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize" asp-route-categoryId="@Model.CategoryId.Value">Yeni &rarr;</a>
+                    </li> }
+                else
+                {
+                    <li class="page-item">
+                        <a class="page-link" asp-route-currentPage="@(Model.CurrentPage+1)" asp-route-isAscending="@Model.IsAscending" asp-route-pageSize="@Model.PageSize">Yeni &rarr;</a>
+                    </li>}
+
+            }
         }
-    }
-</ul>
+    </ul>
 
 </div>
+    @section Scripts {
+        <script>
+            $(document).ready(function() {
+
+                $(function() {
+
+                    const selectPageSize = $('#select-page-size');
+                    const selectIsAscending = $('#select-is-ascending');
+                    const categoryId = $('#category-id').val();
+                    const currentPage = $('#current-page').val();
+                    const categoryQuery = categoryId !== null ? `&categoryId=${categoryId}` : null;
+
+                    selectPageSize.on('change',
+                        function() {
+                            window.location =
+                                `/?pageSize=${selectPageSize.val()}&isAscending=${selectIsAscending.val()}${categoryQuery != null ? categoryQuery : null}&currentPage=${currentPage}`;
+                        });
+                    selectIsAscending.on('change',
+                        function() {
+                            window.location =
+                                `/?pageSize=${selectPageSize.val()}&isAscending=${selectIsAscending.val()}${categoryQuery != null ? categoryQuery : null}&currentPage=${currentPage}`;
+                        });
+                });
+            });
+        </script>
+    }
