--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
            
                     <nav>
                         <ul>
-                            <li><a href="~/Home" >Anasayfa</a></li>
+                            <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
                         </ul>
                     </nav>
 
@@ -35,7 +35,7 @@
                 <div class="bottom-header">
                     <div class="container">
                         <div class="logo">
-                            <h2><a style="color:darkslategrey" href="~/Home" title="">BloggerWay</a></h2>
+                            <h2><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
                         </div>
                     </div>
                 </div>
@@ -69,14 +69,14 @@
                     <div class="row">
                         <div  class="col-lg-4 col-md-6 col-sm-6">
                             <div class="ft-logo">
-                                <h1><a href="#" title="">BloggerWay</a></h1>
+                                <h1><a asp-controller="Home" asp-action="Index">BloggerWay</a></h1>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6">
                         </div>
                         <div class="col-lg-4 col-md-12">
                             <ul class="ft-links">
-                                <li><a href="~/Home" title="">Anasayfa</a></li>
+                                <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
                             </ul>
                         </div>
                     </div>
@@ -109,6 +109,7 @@
     <script src="~/blog/js/bootstrap.min.js"></script>
     <script src="~/blog/js/lib/slick/slick.js"></script>
     <script src="~/blog/js/script.js"></script>
+    @RenderSectionAsync("Scripts",false)
 
 </body>
 </html>
