--- a/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
@@ -2,10 +2,12 @@
 <html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <title>@ViewBag.Title | BloggerWay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Programcılar ve Yazılımcılar için Türkçe Kaynak, Rehber ve İçerikler">
-    <meta   name="author" content="BloggerWay">
+    <meta name="description" content="@ViewBag.Description">
+    <meta name="author" content="@ViewBag.Author">
+    <meta name="keywords" content="@ViewBag.Tags" />
+    <title>@ViewBag.Title | BloggerWay</title>
+  
 
     <link rel="stylesheet" type="text/css" href="~/blog/css/animate.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/bootstrap.min.css">
@@ -16,6 +18,9 @@
     <link rel="stylesheet" type="text/css" href="~/blog/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/color.css">
+ 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" crossorigin="anonymous" />
+
 </head>
 <body>
 
@@ -27,6 +32,9 @@
                     <nav>
                         <ul>
                             <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
+                            <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                            <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
+
                         </ul>
                     </nav>
 
@@ -45,11 +53,13 @@
 
 
 
-
+            <!-- Page Content -->
         <section class="main-content pb-0">
             <div class="container">
                 <div class="row">
+                     <!-- Blog Entries Column -->
                     @RenderBody()
+                    <!-- Sidebar Widgets Column -->
                     <div class="col-lg-4">
                         <div class="sidebar">
                            
@@ -78,6 +88,8 @@
                         <div class="col-lg-4 col-md-12">
                             <ul class="ft-links">
                                 <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
+                                   <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                            <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
                             </ul>
                         </div>
                     </div>
@@ -88,7 +100,7 @@
 
         <section class="bottom-strip">
             <div class="container">
-                <p style="color:aliceblue">©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
+                <p style="color:aliceblue">©2022 BloggerWay Tüm Hakları Saklıdır.</p>
             </div>
         </section>
 
@@ -110,6 +122,7 @@
     <script src="~/blog/js/bootstrap.min.js"></script>
     <script src="~/blog/js/lib/slick/slick.js"></script>
     <script src="~/blog/js/script.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
+    @RenderSectionAsync("Scripts",false)
 </body>
 </html>
