Yorum Sayfası ile ilgili hata düzeltmeleri yapıldı.

--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -112,7 +112,7 @@
     <script src="~/blog/js/script.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
 
-    @RenderSectionAsync("Scripts",false)
+    @await RenderSectionAsync("Scripts",false)
 
 </body>
 </html>
