--- a/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
@@ -124,6 +124,6 @@
     <script src="~/blog/js/lib/slick/slick.js"></script>
     <script src="~/blog/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" crossorigin="anonymous"></script>
-    @RenderSectionAsync("Scripts",false)
+    @await RenderSectionAsync("Scripts",false)
 </body>
 </html>
