ArticleDetail ,ArticleDetailRightSideBarViewModel sınıfları ve  _ArticleDetailRightSideBarPartial sayfası oluşturuldu.

--- a/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ArticleLayout.cshtml
@@ -18,7 +18,9 @@
     <link rel="stylesheet" type="text/css" href="~/blog/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/color.css">
- 
+    <link rel="stylesheet" type="text/css" href="~/blog/css/site.css">
+    
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" crossorigin="anonymous" />
 
 
@@ -64,7 +66,7 @@
                     <div class="col-lg-4">
                         <div class="sidebar">
                            
-                            @await Component.InvokeAsync("RightSideBar");
+                     
 
 
                         </div>
