İletişim (Contact) Sayfası ve EmailSendDto Sınıfı oluşturuldu.

--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <ul>
                             <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
                             <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                            <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
+
+
                         </ul>
                     </nav>
 
@@ -90,6 +93,8 @@
                         <div class="col-lg-4 col-md-12">
                             <ul class="ft-links">
                                 <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
+                                     <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                             <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
                             </ul>
                         </div>
                     </div>
