--- a/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>@ViewBag.Title | BloggerWay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="@ViewBag.Description">
-    <meta   name="author" content="@ViewBag.Author">
-    <meta   name="keywords" content="@ViewBag.Tags">
-
+    <meta name="description" content="Programcılar ve Yazılımcılar için Türkçe Kaynak, Rehber ve İçerikler">
+    <meta   name="author" content="BloggerWay">
 
     <link rel="stylesheet" type="text/css" href="~/blog/css/animate.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/bootstrap.min.css">
@@ -18,9 +16,8 @@
     <link rel="stylesheet" type="text/css" href="~/blog/css/style.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/responsive.css">
     <link rel="stylesheet" type="text/css" href="~/blog/css/color.css">
-    <link rel="stylesheet" type="text/css" href="~/blog/css/site.css">
+    <link rel="stylesheet" type="text/css" href="~/blog/css/contact-page.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet" crossorigin="anonymous" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
 
       
 
@@ -28,24 +25,26 @@
 <body>
 
     <div class="wrapper">
-        <header>
+  <header>
             <div class="container">
                 <div class="top-bar">
            
-                  <nav>
+                    <nav>
                         <ul>
-                            <li ><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
-                             <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
-                             <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
+                            <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
+                            <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
+                            <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
+
 
                         </ul>
                     </nav>
+
                     <div class="clearfix"></div>
                 </div>
                 <div class="bottom-header">
                     <div class="container">
                         <div class="logo">
-                            <h2 ><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
+                            <h2><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
                         </div>
                     </div>
                 </div>
@@ -56,14 +55,15 @@
 
 
 
+
         <section class="main-content pb-0">
-            <div class="container">
-                <div class="row">
+            <div class="container-fluid">
+                <div class="row-center">
                     @RenderBody()
                     <div class="col-lg-4">
                         <div class="sidebar">
                            
-                    
+                           @* @await Component.InvokeAsync("RightSideBar");*@
 
 
                         </div>
