--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/Components/AdminMenu/Default.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/Components/AdminMenu/Default.cshtml
@@ -8,6 +8,10 @@
                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     Yönetim Paneli
                 </a>
+                <a class="nav-link" asp-area="null" asp-controller="Home" asp-action="Index">
+                    <div class="sb-nav-link-icon"><i class="fas fa-blog"></i></div>
+                    Blog Modülü
+                </a>
                 <div class="sb-sidenav-menu-heading">İçerikler</div>
                 <a class="nav-link" asp-area="Admin" asp-controller="Category" asp-action="Index">
                     <div class="sb-nav-link-icon"><i class="fas fa-th-list"></i></div>
@@ -22,14 +26,14 @@
                     Yorumlar
                 </a>
                 <div class="sb-sidenav-menu-heading">Kullanıcılar</div>
-                @if (Model.Roles.Any(r=>r.Equals("SuperAdmin")||r.Equals("Role.Read")))
+                @if (Model.Roles.Any(r => r.Equals("SuperAdmin") || r.Equals("Role.Read")))
                 {
                     <a class="nav-link" asp-area="Admin" asp-controller="Role" asp-action="Index">
                         <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
                         Roller
                     </a>
                 }
-                @if (Model.Roles.Any(r=>r.Equals("SuperAdmin")||r.Equals("User.Read")))
+                @if (Model.Roles.Any(r => r.Equals("SuperAdmin") || r.Equals("User.Read")))
                 {
                     <a class="nav-link" asp-area="Admin" asp-controller="User" asp-action="Index">
                         <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
