--- a/BloggerWay.MVC/Areas/Admin/Views/Shared/_UserLoginLayout.cshtml
+++ b/BloggerWay.MVC/Areas/Admin/Views/Shared/_UserLoginLayout.cshtml
@@ -9,6 +9,8 @@
         <title>@ViewBag.Title | BloggerWay</title>
         <link href="~/AdminLTE/css/styles.css" rel="stylesheet" />
         <link href="~/AdminLTE/css/userLogin.css" rel="stylesheet" />
+        <link href="~/AdminLTE/css/login.css" rel="stylesheet" />
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
     </head>
     <body class="bg-primary">
