--- a/BloggerWay.MVC/Views/Article/_ArticleDetailRightSideBarPartial.cshtml
+++ b/BloggerWay.MVC/Views/Article/_ArticleDetailRightSideBarPartial.cshtml
@@ -1,9 +1,9 @@
 ﻿@model BloggerWay.MVC.Models.ArticleDetailRightSideBarViewModel
 <div class="col-md-3">
-
+    
     <div style="background-color: whitesmoke" class="card my-auto">
-        <img  style="background-color:darkslategrey" src="~/img/@Model.User.Picture" class="card-img-top text-center image-thumbnail mt-1 mb-1" alt="@Model.User.UserName" />
-        <h5  style="background-color:darkslategrey"   class="text-center"><a style="color:white">@Model.User.UserName</a></h5>
+        <img  style="background-color:#182539" src="~/img/@Model.User.Picture" class="card-img-top text-center image-thumbnail mt-1 mb-1" alt="@Model.User.UserName" />
+        <h5  style="background-color:#182539"   class="text-center"><a style="color:white">@Model.User.UserName</a></h5>
         <div  class="card-body">
             <p style="color:black" class="card-text text-center">@Model.User.About</p>
             <br />
@@ -41,7 +41,7 @@
     <!-- Side Widget -->
     <br />
      <div style="background-color:whitesmoke" class="widget widget-catgs my-4">
-        <h5 style="color:darkslategrey" class="widget-title">@Model.Header</h5>
+        <h5 style="color:#182539" class="widget-title">@Model.Header</h5>
         <br />
         <br />
          <div style="background-color: black"class="catgs-links">
