--- a/BloggerWay.MVC/Views/Home/About.cshtml
+++ b/BloggerWay.MVC/Views/Home/About.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Author = Model.SeoAuthor;
 }
 <div class="container-fluid">
-    <div style="background-color:darkslategrey" class="jumbotron mt-4">
+    <div style="background-color:#182539" class="jumbotron mt-4">
         <div class="d-flex align-items-center h-100">
             <div class="container text-center py-5">
               @*  <img src="~/ComingSoon/images/icons/logo.png" alt="BloggerWay Logo" class="img-fluid mb-1"/>*@
