--- a/BloggerWay.MVC/Views/Home/Index.cshtml
+++ b/BloggerWay.MVC/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                <a style="background-color:#c47941" asp-controller="Article" asp-action="Detail" asp-route-articleId="@article.Id"  class="btn btn-primary" >Daha fazla oku &rarr;</a>
 
            </div>
-           <div style="background-color:#487a7a"class="card-footer text-muted">
+           <div style="background-color:#182539"class="card-footer text-muted">
                 <p style="color:white">  @article.User.UserName tarafından @article.Date tarihinde paylaşıldı.</p>
            </div>
        </div>
