--- a/BloggerWay.MVC/Views/Shared/Components/RightSideBar/Default.cshtml
+++ b/BloggerWay.MVC/Views/Shared/Components/RightSideBar/Default.cshtml
@@ -2,10 +2,10 @@
 @model BloggerWay.MVC.Models.RightSideBarViewModel
 
 <div class="row-cols-md-4">
-
+    
     
     <div style="background-color:whitesmoke"  class="card my-auto">
-        <h5  style="color:darkslategrey" style="color:black" class="widget-title">Arama</h5>
+        <h5  style="color:#182539" style="color:black" class="widget-title">Arama</h5>
         <div class="card-body">
           <form asp-controller="Article" asp-action="Search" method="get">
             <div class="input-group">
@@ -24,7 +24,7 @@
               <ul style="color:black"class="catgs-links">
                             
                         </ul>
-        <h3 style="color:darkslategrey" class="widget-title">Kategoriler</h3>
+        <h3 style="color:#182539" class="widget-title">Kategoriler</h3>
     <br />
         <ul style="color:whitesmoke"class="catgs-links">
                <li class="list-group-item" style="background-color:whitesmoke"><a style="color:black"  asp-controller="Home" asp-action="Index">Hepsi</a></li>
@@ -39,7 +39,7 @@
 
     <!-- Side Widget -->
     <div style="background-color:whitesmoke" class="widget widget-catgs my-4">
-        <h5 style="color:darkslategrey" class="widget-title">En Çok Okunan Makaleler</h5>
+        <h5 style="color:#182539" class="widget-title">En Çok Okunan Makaleler</h5>
         <div style="background-color: black"class="catgs-links">
             <div class="row">
                 <div class="col-lg-12">
