--- a/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
@@ -24,33 +24,7 @@
 </head>
 <body>
 
-    <div class="wrapper">
-  <header>
-            <div class="container">
-                <div class="top-bar">
-           
-                    <nav>
-                        <ul>
-                            <li><a asp-controller="Home" asp-action="Index">Anasayfa</a></li>
-                            <li><a asp-controller="Home" asp-action="About">Hakkımızda</a></li>
-                            <li><a asp-controller="Home" asp-action="Contact">İletişim</a></li>
-
-
-                        </ul>
-                    </nav>
-
-                    <div class="clearfix"></div>
-                </div>
-                <div class="bottom-header">
-                    <div class="container">
-                        <div class="logo">
-                            <h2><a style="color:darkslategrey" asp-controller="Home" asp-action="Index">BloggerWay</a></h2>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-
+    <partial name="_MainMenuPartial"/>
 
 
 
@@ -74,7 +48,7 @@
 
 
 
-        <footer  style="background-color:darkslategrey">
+        <footer  style="background-color:#182539">
             <div class="container">
                 <div class="footer-content">
                     <div class="row">
