--- a/BloggerWay.MVC/wwwroot/blog/css/contact-page.css
+++ b/BloggerWay.MVC/wwwroot/blog/css/contact-page.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background: -webkit-linear-gradient(left, #ac6b3a, #7abacc);
+    background: -webkit-linear-gradient(left, #182539, #7abacc );
 }
 
 .contact-form {
