--- a/BloggerWay.MVC/Views/Home/Contact.cshtml
+++ b/BloggerWay.MVC/Views/Home/Contact.cshtml
@@ -8,10 +8,10 @@
 }
 <div class="container contact-form">
     <div class="contact-image">
-        <img src="https://i.imgur.com/zhHc7Ab.png" alt="rocket_contact"/>
+        <img src="https://i.imgur.com/ne2J5E6.png" alt="rocket_contact"/>
     </div>
     <form asp-controller="Home" asp-action="Contact" method="post">
-        <h3 style="color:darkslategrey">Bizlere bir mesaj bırakın</h3>
+        <h3 style="color:#182539">Bizlere bir mesaj bırakın</h3>
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
@@ -24,7 +24,7 @@
                     <input type="text" name="txtSubject" class="form-control" placeholder="Konu / Başlık" asp-for="Subject" />
                 </div>
                 <div class="form-group">
-                    <input style="background-color:darkslategrey" type="submit" name="btnSubmit" class="btnContact" value="Gönder" />
+                    <input style="background-color:#182539" type="submit" name="btnSubmit" class="btnContact" value="Gönder" />
                 </div>
             </div>
             <div class="col-md-6">
