--- a/BloggerWay.MVC/Views/Shared/Error.cshtml
+++ b/BloggerWay.MVC/Views/Shared/Error.cshtml
@@ -6,14 +6,14 @@
 }
 <div class="col-lg-12">
     <div class="text-center mt-4">
-        <h1 class="display-1">500</h1>
-        <p class="lead">@errorModel.Message</p>
+        <h1 style="color:white" class="display-1">500</h1>
+        <p style="color:white" class="lead">@errorModel.Message</p>
         @if (errorModel.Detail != null)
         {
-            <p class="lead">@errorModel.Detail</p>
+            <p style="color:white" class="lead">@errorModel.Detail</p>
         }
         <a asp-controller="Home" asp-action="Index" class="text-warning">
-            <i class="fas fa-arrow-left mr-1"></i>
+            <i style="color:orange" class="fas fa-arrow-left mr-1"></i>
             Anasayfa'ya dönmek için tıklayınız.
         </a>
     </div>
