--- a/BloggerWay.MVC/Views/Shared/_Layout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.Extensions.Options
 @using BloggerWay.Entities.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@inject IOptions<WebsiteInfo> WebsiteInfo
+@inject IOptionsSnapshot<WebsiteInfo> WebsiteInfo
 @{
     var websiteInfo = WebsiteInfo.Value;
 }
