--- a/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
+++ b/BloggerWay.MVC/Views/Shared/_ContactLayout.cshtml
@@ -74,7 +74,7 @@
 
         <section class="bottom-strip">
             <div class="container">
-                <p style="color:aliceblue">©2022 BloggerWay. Tüm Hakları Saklıdır.</p>
+                <p style="color:aliceblue">©@DateTime.Now.Year BloggerWay. Tüm Hakları Saklıdır.</p>
             </div>
         </section>
 
