--- a/BloggerWay.MVC/Views/Article/Search.cshtml
+++ b/BloggerWay.MVC/Views/Article/Search.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="col-md-8">
 
-    <h1 class="my-4">
+    <h1 style="color:black" class="my-4">
         Arama Sonuçları
     </h1>
     <form>
